scode/team7/prob17/error.txt
  File "main.py", line 10
    for i in range (xy(0)):
                          ^
SyntaxError: invalid syntax
